Fix border radius on mobile

--- a/materialious/static/style.css
+++ b/materialious/static/style.css
@@ -63,6 +63,7 @@ main.root {
 @media screen and (max-width: 650px) {
 	dialog.right {
 		width: 100% !important;
+		border-radius: 0 !important;
 	}
 }
 
